--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.11",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "twilio": "^5.10.5"
@@ -22,10 +21,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
